...
                android:ems="10"
                android:hint="@string/author"
                android:inputType="text" />
        </LinearLayout>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/descr"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/save" />
...
